--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -99,12 +99,12 @@
 <script type="text/javascript" src="/laofuzi/js/base.js"></script>
 <script>
     //判断顶部导航显示信息
-    if(userid != undefined | userid != "" | userid != "null"){
+    if(userid != undefined | userid != "" | userid != null){
         var infouser = "欢迎! &nbsp;<a href=\"#\" style=\"color:#ff4e00;\">"+ user +"</a>&nbsp;|&nbsp;\n" +
-            "<a href=\"login\" style=\"color:#ff4e00;\">退出</a>";
-    }else if(user1 != undefined | user1 != "" | user1 != "null"){
+            "<a href='javascript:exit()' style=\"color:#ff4e00;\">退出</a>";
+    }else if(user1 != undefined | user1 != "" | user1 != null){
         var infouser = "欢迎! &nbsp;<a href=\"#\" style=\"color:#ff4e00;\">"+ user1 +"</a>&nbsp;|&nbsp;\n" +
-            "<a href=\"login\" style=\"color:#ff4e00;\">退出</a>";
+            "<a href='javascript:exit()' style=\"color:#ff4e00;\">退出</a>";
     }
     $("#userinfo").append(infouser);
 
@@ -304,7 +304,7 @@
                 async: false,
                 success: function(result){
                     console.log(result);
-                    ids.push(result[index].bookId);
+                    ids.push(index);
                     totalaccount += result[index].unitprice*result[index].number
                 }
             });
@@ -320,7 +320,7 @@
                 success: function(result){
                     console.log(result);
                     for(var i = 0; i < ids.length; i++){
-                        if(ids[i] == result[index].bookId){
+                        if(ids[i] == index){
                             ids.splice(i,1);
                             totalaccount -= result[index].unitprice*result[index].number
                         }
