--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,17 +59,17 @@
 <script type="text/javascript" src="/laofuzi/js/base.js"></script>
 <script>
     // 判断顶部导航显示信息
-    if(userid != undefined | userid != "" | userid != "null"){
+    if(userid != undefined | userid != "" | userid != null){
         var infouser = "欢迎! &nbsp;<a href=\"#\" style=\"color:#ff4e00;\">"+ user +"</a>&nbsp;|&nbsp;\n" +
-            "<a href=\"login\" style=\"color:#ff4e00;\">退出</a>";
+            "<a href='javascript:exit()' style=\"color:#ff4e00;\">退出</a>";
         var quanxian = "<a href=\"index\">首页</a>&nbsp;&nbsp;&nbsp;|&nbsp;\n" +
             "<a href=\"order\">我的订单</a>&nbsp;&nbsp;|&nbsp;\n" +
             "<a class=\"car_t\" href=\"checkout\">&nbsp;&nbsp;购物车 </a>";
         quanxian += "<div class=\"last\">\n<div class=\"shop\">\n" +
             "<h4 class='lih4'>老夫子</h4><ul id=\"lfzcart\"></ul>\n</div>\n</div>";
-    }else if(user1 != undefined | user1 != "" | user1 != "null"){
+    }else if(user1 != undefined | user1 != "" | user1 != null){
         var infouser = "欢迎! &nbsp;<a href=\"#\" style=\"color:#ff4e00;\">"+ user1 +"</a>&nbsp;|&nbsp;\n" +
-            "<a href=\"login\" style=\"color:#ff4e00;\">退出</a>";
+            "<a href='javascript:exit()' style=\"color:#ff4e00;\">退出</a>";
         quanxian = "<a href=\"index\">首页</a>&nbsp;&nbsp;&nbsp;|&nbsp;\n" +
             "<a href=\"order\">我的订单</a>&nbsp;&nbsp;|&nbsp;\n" +
             "<a class=\"car_t\" href=\"checkout\">&nbsp;&nbsp;购物车 </a>";
