--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -351,8 +351,7 @@
                         orders += "<span>订单状态：待收货&nbsp;&nbsp;&nbsp;&nbsp; </span>\n" +
                             "<span>操作：<a href='javascript:dealwith();'>确认收货</a></span>\n";
                     }else{
-                        orders += "<span>订单状态：已完成&nbsp;&nbsp;&nbsp;&nbsp; </span>\n" +
-                            "<span>操作：<a href='javascript:dealwith();'>评价</a></span>\n";
+                        orders += "<span>订单状态：已完成&nbsp;&nbsp;&nbsp;&nbsp; </span>\n"
                     }
                     orders += "</div>\n</h4>";
                     $.ajax({
