--- a/src/main/resources/templates/CategoryList.html
+++ b/src/main/resources/templates/CategoryList.html
@@ -61,6 +61,27 @@
                     <td width="70">&nbsp; 类别：</td>
                     <td id="leibie" class="td_a"></td>
                 </tr>
+                <tr>
+                    <td width="90">&nbsp; 新旧程度：</td>
+                    <td class="td_a">
+                        <a href="" class="now">九成新</a>
+                        <a href="">八成新</a>
+                        <a href="">七成新</a>
+                        <a href="">六成新</a>
+                        <a href="">五成新</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td width="90">&nbsp; 书籍要求：</td>
+                    <td class="td_a">
+                        <a href="" class="now">全部</a>
+                        <a href="">折角较少</a>
+                        <a href="">笔记较少</a>
+                        <a href="">笔记多</a>
+                        <a href="">无笔记</a>
+                        <a href="">折痕较少</a>
+                    </td>
+                </tr>
             </table>
         </div>
         <!--End 筛选条件 End-->
