--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -66,8 +66,8 @@
                 </ul>
                 <div class="clearfix"></div>
             </div>
-            <div id="useraddress" class="content address" style="margin: 30px;">
-            </div>
+            <a href="address"><h6 style="color:#df1f26">管理收货地址</h6></a>
+            <div id="useraddress" class="address" style="margin:0 40px 15px;"></div>
             <div id="userorders" class="shopping_cart shop"></div>
             <div class="clearfix"> </div>
             <div class="fr">
